--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,12 +1,15 @@
 name: Run
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ['Tests']
+    types:
+      - completed
 
 jobs:
   job:
+    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main'
+
     runs-on: ubuntu-latest
 
     steps:
