--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint ./"
   },
   "dependencies": {
+    "@types/telegraph.md": "^0.0.1",
     "axios": "^1.13.2",
     "neatlint": "^1.2.0",
     "prettier": "^3.7.4",
