--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "@types/telegraph.md": "^0.0.0",
     "axios": "^1.13.2",
-    "neatlint": "^1.2.6",
     "prettier": "^3.7.4",
+    "rulint": "^1.0.2",
     "telegraph.md": "^0.0.1"
   }
 }
