--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "axios": "^1.13.4",
     "prettier": "^3.8.1",
     "rulint": "^1.0.5",
-    "telegraph.md": "^0.0.1",
-    "eslint": "9"
+    "telegraph.md": "^0.0.1"
   }
 }
